# ai_shezhen

./: .gitignore  CLAUDE.md  README.md  add_knowledge_to_rag.py  alembic.ini  analyze_dataset.py  create_knowledge_base.py  create_minimal_prompt.py  docker-compose.yml  evaluate.py  extract_images_text.py  extract_pdf_tongue_diagnosis.py  extract_ppt_to_rag.py  fix_llm_diagnosis.py  init_db.py  init_rag_knowledge_base.py  paqdewqrd.json  prd.json  prd1.json  progress.txt  progress_i18n.txt  quick_train_test.py  requirements.txt  routes.txt  tech_lead_config.yaml  test_llm_request.json  train_classification.py  train_segmentation.py  train_with_hard_mining.py
api_service/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt  start_api.py  start_worker.py  test_wenxin_api.py
api_service/app/: __init__.py  main.py
api_service/config/: __init__.py  celery_config.py  rule_based_config.json  wenxin_config.yaml
api_service/core/: __init__.py  audit_trail.py  case_retrieval.py  config.py  llm_diagnosis.py  logging_config.py  pdf_generator.py  rag_config.py  rag_pipeline.py  rule_based_diagnosis.py  vector_db.py
api_service/docs/: cost_estimation.md
api_service/knowledge/: tcm_tongue_diagnosis_knowledge.md  tcm_tongue_diagnosis_rag.json
api_service/models/: __init__.py  predictors.py
api_service/prompts/: FIELD_MAPPING.md  expert_review_record.md  few_shot_examples.json  few_shot_validation_report.json  prompt_optimization.md  system_prompt.txt  test_few_shot_examples.json  test_user_prompt_template.py  user_prompt_template.py  validate_few_shot_examples.py
api_service/schemas/: __init__.py  schemas.py
api_service/tests/: __init__.py  conftest.py
api_service/worker/: __init__.py  celery_app.py  tasks.py
(+6989 files in other folders)
